<resources>
    <string name="app_name">干房子</string>
    <string name="app_name_en">G.House</string>

    <string name="action_bill">账单</string>
    <string name="action_todo">待办事项</string>
    <string name="action_add_todo">添加记录</string>
    <string name="action_center">个人中心</string>
    <string name="action_about">关于</string>
    <string name="action_login">登录</string>
    <string name="action_confirm">确认</string>
    <string name="action_evaluate">评价</string>
    <string name="action_update">更新</string>
    <string name="action_add">增加</string>
    <string name="action_scan">扫码</string>
    <string name="action_logout">退出登录</string>
    <string name="action_reg">注册</string>
    <string name="action_reg_house">注册房子</string>
    <string name="action_house">房子</string>
    <string name="action_bill_view">账单</string>
    <string name="action_back">返回</string>
    <string name="action_uhouse">搬家</string>
    <string name="action_add_member">添加成员</string>
    <string name="action_update_phone">修改手机号</string>
    <string name="action_update_pwd">修改密码</string>
    <string name="action_find_am_record">交钱记录</string>
    <string name="action_reload">重新加载</string>

    <string name="tli_hint_uname">请输入用户名</string>
    <string name="tli_hint_pwd">请输入密码</string>
    <string name="til_hint_bill_content">账单内容</string>
    <string name="til_hint_bill_total">合计</string>
    <string name="til_hint_bill_code">发票编码</string>
    <string name="til_hint_bill_extra">备注</string>
    <string name="dialog_welcome">欢迎干Houser</string>
    <string name="cb_hint_iam_owner">我是拥有者</string>
    <string name="til_hint_rhouse_name">(新)用户名</string>
    <string name="til_hint_rhouse_pwd">密码</string>
    <string name="til_hint_rhouse_phone">手机号码</string>
    <string name="til_hint_rhouse_address">详细地址</string>
    <string name="til_hint_rhouse_intro">房子介绍</string>
    <string name="til_hint_center_opwd">旧密码</string>
    <string name="til_hint_center_npwd">新密码</string>
    <string name="til_hint_no_text">无</string>

    <string name="tv_total">统计: </string>
    <string name="tv_money_type">币种: </string>
    <string name="tv_cost_type">类型: </string>
    <string name="tv_add_images">照片: </string>
    <string name="tv_set_uname">用户名: </string>
    <string name="tv_phone">手机号</string>
    <string name="tv_house_id">房子编号</string>
    <string name="tv_house_address">地址</string>
    <string name="tv_house_money_surplus">剩余资金</string>
    <string name="tv_house_intro">描述</string>
    <string name="tv_house_add_money">增加Money</string>
    <string name="tv_house_owner">拥有者</string>
    <string name="tv_house_moving">搬家</string>
    <string name="tv_house_member">入住成员</string>
    <string name="tv_house_image">图片</string>
    <string name="tv_bd_spend">花费</string>
    <string name="tv_bd_creater">创建人</string>
    <string name="tv_bd_confirmer">确认人</string>
    <string name="tv_bd_yes_confirm">已确认</string>
    <string name="tv_bd_no_confirm">未确认</string>
    <string name="tv_vud_name">Name:&#160;</string>
    <string name="tv_vud_phone">Phone:&#160;</string>
    <string name="tv_plus">+</string>
    <string name="tv_opeartor">操作</string>
    <string name="tv_coin">货币</string>

    <string name="rb_mt_hint_rmb">RMB</string>
    <string name="rb_mt_hint_dollar">Dollars</string>
    <string name="rb_mt_hint_other">Other</string>

    <string name="hint_ct_eat">吃</string>
    <string name="hint_ct_wear">穿</string>
    <string name="hint_ct_live">住</string>
    <string name="hint_ct_travel">行</string>
    <string name="hint_ct_play">玩</string>
    <string name="hint_ct_other">其他</string>

    <string name="unit_year">年</string>
    <string name="unit_month">月</string>
    <string name="unit_day">日</string>

    <!-- Message-->
    <string name="msg_all_not_empty">所有信息不能为空，请补充完整!</string>
    <string name="msg_register_success">注册成功!</string>
    <string name="msg_publish_success">发布成功!</string>
    <string name="msg_login_info_not_null">用户名或密码不能为空!</string>
    <string name="msg_nullpointer_error">服务器错误</string>
    <string name="msg_register_error">注册失败，请重试</string>
    <string name="msg_request_error">请求失败，请刷新重试</string>
    <string name="msg_network_disconnect">网络未连接，请检查网络</string>
    <string name="msg_content_bill_not_null">账单内容和消费合计不能为空</string>
    <string name="msg_cost_type_not_null">请至少选择一个消费类型</string>
    <string name="msg_user_null">用户数据获取失败</string>
    <string name="msg_update_error">数据更新失败，请稍后重试</string>
    <string name="msg_data_null">数据为空，无法操作</string>
    <string name="msg_have_no_permission">您没有该项操作权限</string>
    <string name="msg_have_confirmed">账单已经确认，无法进行此操作</string>
    <string name="msg_have_no_data">没有任何账单数据，添加一条吧!</string>
    <string name="msg_no_more_data">没有更多记录!</string>
    <string name="msg_empty_data">没有数据，点击&#160;「+」&#160;进行添加，或</string>

    <!-- copyright info-->
    <string name="tv_about">「MaxBox」团队作品\n源码：https://github.com/whilu/GHouse</string>
</resources>