<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_popup_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_add_billdetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <co.lujun.androidelasticview.ElasticScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_bd_bi_type"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/grey_circle"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_bd_bi_7securitycode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_visibility_grey600_18dp"
                        android:drawablePadding="2dp"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/gray_text"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_bd_bi_add_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="2dp"
                        android:drawableLeft="@drawable/ic_query_builder_grey600_18dp"
                        android:drawablePadding="2dp"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/gray_text"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_bd_bi_latesttime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="2dp"
                        android:drawableLeft="@drawable/ic_timer_grey600_18dp"
                        android:drawablePadding="2dp"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/gray_text"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <include layout="@layout/view_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView_Tag"
                    android:text="@string/til_hint_bill_content" />

                <TextView
                    android:id="@+id/tv_bd_bi_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:lineSpacingExtra="3dp"
                    android:text=""
                    android:textColor="@color/deep_gray"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <include layout="@layout/view_divider" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView_Tag"
                    android:text="@string/tv_bd_spend" />

                <TextView
                    android:id="@+id/tv_bd_bi_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:lineSpacingExtra="3dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/deep_gray"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <include layout="@layout/view_divider" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView_Tag"
                    android:text="@string/tv_bd_creater" />

                <TextView
                    android:id="@+id/tv_bd_bi_add_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:lineSpacingExtra="3dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/deep_gray"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <include layout="@layout/view_divider" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextView_Tag"
                        android:text="@string/tv_bd_confirmer" />

                    <TextView
                        android:id="@+id/tv_bd_bi_conf_yes"
                        style="@style/TextView_Tag"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/green_tag"
                        android:text="@string/tv_bd_yes_confirm"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_bd_bi_conf_no"
                        style="@style/TextView_Tag"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/red_tag"
                        android:text="@string/tv_bd_no_confirm"
                        android:visibility="gone" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_bd_bi_conf_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:lineSpacingExtra="3dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/deep_gray"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <include layout="@layout/view_divider" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView_Tag"
                    android:text="@string/til_hint_bill_extra" />

                <TextView
                    android:id="@+id/tv_bd_bi_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:lineSpacingExtra="3dp"
                    android:text=""
                    android:textColor="@color/deep_gray"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <include layout="@layout/view_divider" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView_Tag"
                    android:text="@string/til_hint_bill_code" />

                <TextView
                    android:id="@+id/tv_bd_bi_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:lineSpacingExtra="3dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/deep_gray"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <include layout="@layout/view_divider" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView_Tag"
                    android:text="@string/tv_house_image" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_bd_invoice_images"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="6dp" />

                <include layout="@layout/view_divider" />
            </LinearLayout>

        </LinearLayout>
    </co.lujun.androidelasticview.ElasticScrollView>
</LinearLayout>